--- a/index.html
+++ b/index.html
@@ -1,30 +1,3 @@
-function updateScoreDisplays() {
-const { x, y } = userPosition;
-
-// Convert position to scores (0-100 scale)
-const speedScore = Math.round(Math.max(0, Math.min(100, (x + 100) / 2)));
-const resilienceScore = Math.round(Math.max(0, Math.min(100, (y + 100) / 2)));
-
-// If we have quiz scores, use those; otherwise use position
-let finalScores;
-if (scores.speed !== 0 || scores.accuracy !== 0 || scores.resilience !== 0 || scores.adaptability !== 0) {
-// New scoring system with negative values and wider ranges
-const maxPossibleScore = questions.length * 45; // Max positive score per dimension
-const minPossibleScore = questions.length * -50; // Max negative score per dimension
-const scoreRange = maxPossibleScore - minPossibleScore;
-
-finalScores = {
-speed: Math.round(Math.max(0, Math.min(100, ((scores.speed - minPossibleScore) / scoreRange) * 100))),
-accuracy: Math.round(Math.max(0, Math.min(100, ((scores.accuracy - minPossibleScore) / scoreRange) * 100))),
-resilience: Math.round(Math.max(0, Math.min(100, ((scores.resilience - minPossibleScore) / scoreRange) * 100))),
-adaptability: Math.round(Math.max(0, Math.min(100, ((scores.adaptability - minPossibleScore) / scoreRange) * 100)))
-};
-} else {
-finalScores = {
-speed: speedScore,
-accuracy: Math.round((speedScore + resilienceScore) / 2),
-resilience: resilienceScore,
-adaptability: Math.round((Math.abs(x) + Math.abs(y)) / 2
 <!DOCTYPE html>
 <html lang="en">
 
@@ -550,7 +523,7 @@ adaptability: Math.round((Math.abs(x) + Math.abs(y)) / 2
                         <div class="question-counter">
                             <div class="label">Scenario</div>
                             <div class="numbers">
-                                <span id="current-q">1</span> of <span id="total-q">25</span>
+                                <span id="current-q">1</span> of <span id="total-q">20</span>
                             </div>
                         </div>
                     </div>
@@ -1032,9 +1005,9 @@ adaptability: Math.round((Math.abs(x) + Math.abs(y)) / 2
                 const button = document.createElement('button');
                 button.className = 'answer-btn';
                 button.innerHTML = `
-            <div class="radio"></div>
-            <div class="text">${answer.text}</div>
-        `;
+                    <div class="radio"></div>
+                    <div class="text">${answer.text}</div>
+                `;
                 button.addEventListener('click', () => selectAnswer(answer));
                 answersContainer.appendChild(button);
             });
@@ -1080,9 +1053,12 @@ adaptability: Math.round((Math.abs(x) + Math.abs(y)) / 2
 
         function finishQuiz() {
             // Calculate final position based on speed and resilience (primary axes)
-            const maxScore = questions.length * 25; // Max score per dimension is 25 per question
-            const speedPercent = Math.max(0, Math.min(100, (scores.speed / maxScore) * 100));
-            const resiliencePercent = Math.max(0, Math.min(100, (scores.resilience / maxScore) * 100));
+            const maxPossibleScore = questions.length * 45;
+            const minPossibleScore = questions.length * -50;
+            const scoreRange = maxPossibleScore - minPossibleScore;
+
+            const speedPercent = ((scores.speed - minPossibleScore) / scoreRange) * 100;
+            const resiliencePercent = ((scores.resilience - minPossibleScore) / scoreRange) * 100;
 
             // Convert percentages to coordinate system (-100 to 100)
             const finalX = (speedPercent - 50) * 2;
@@ -1253,9 +1229,9 @@ adaptability: Math.round((Math.abs(x) + Math.abs(y)) / 2
                 const strengthElement = document.createElement('div');
                 strengthElement.className = 'strength-item';
                 strengthElement.innerHTML = `
-            <div class="strength-dot"></div>
-            <span class="strength-text">${strength}</span>
-        `;
+                    <div class="strength-dot"></div>
+                    <span class="strength-text">${strength}</span>
+                `;
                 strengthsList.appendChild(strengthElement);
             });
         }
@@ -1358,7 +1334,7 @@ adaptability: Math.round((Math.abs(x) + Math.abs(y)) / 2
                 percentile = "Bottom 5%";
                 profile = {
                     emoji: "🆘",
-                    title: "Requires Intensive Support - probably retarded",
+                    title: "Requires Intensive Support - Probably retarded",
                     description: "Decision-making and problem-solving require significant development. Seek structured training programs and close mentorship to build these critical skills.",
                     strengths: [
                         "Aware of current limitations",
